@@ -86,6 +86,7 @@ bool P1MeterSerial::StopHardware()
 			//Don't throw from a Stop command
 		}
 	}
+	m_bIsStarted=false;
 	return true;
 }
 
