@@ -36,7 +36,8 @@ bool CYouLess::StartHardware()
 	Init();
 	//Start worker thread
 	m_thread = boost::shared_ptr<boost::thread>(new boost::thread(boost::bind(&CYouLess::Do_Work, this)));
-
+	m_bIsStarted=true;
+	sOnConnected(this);
 	return (m_thread!=NULL);
 }
 
@@ -54,7 +55,7 @@ bool CYouLess::StopHardware()
 		m_stoprequested = true;
 		m_thread->join();
 	}
-    
+    m_bIsStarted=false;
     return true;
 }
 
